dataset1235/2025-2/805158916/users/2584427029/executions/2651470117_3691284457.log
== SUBMISSION (2025-08-19 01:10:10)
-- CODE: 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media (n1*1+n2*2+n3*3+n4*4)/10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 01:27:47)
-- CODE: 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = (n1*1 + n2*2 + n3*3 + n4*4)/10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:14:18)
-- CODE: 
n1 = float(input("Digite a primeira nota:"))
n2 = float(input("Digite a segunda nota:"))
n3 = float(input("Digite a terceira nota:"))
n4 = float(input("Digite a quarta nota:"))

p1,p2,p3,p4=1,2,3,4

media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)

print("Média Ponderada:",round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:13:23)
-- CODE: 
n1 = float(input("Digite a primeira nota:"))
n2 = float(input("Digite a segunda nota:"))
n3 = float(input("Digite a terceira nota:"))
n4 = float(input("Digite a quarta nota:"))

p1,p2,p3,p4 = 1,2,3,4

media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)

print("Média Ponderada:",round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 22:16:14)
-- CODE: 
n1 = float(input("Digite a primeira nota:"))
n2 = float(input("Digite a segunda nota:"))
n3 = float(input("Digite a terceira nota:"))
n4 = float(input("Digite a quarta nota:"))

p1,p2,p3,p4 = 1,2,3,4

media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)

print("Média Ponderada:",round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:18:48)
-- CODE: 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media (n1*1 + n2*2 + n3*3 + n4*4)/10

print(,round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print(,round(media,2))
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print(,round(media,2))
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print(,round(media,2))
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print(,round(media,2))
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print(,round(media,2))
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print(,round(media,2))
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:18:58)
-- CODE: 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media (n1*1 + n2*2 + n3*3 + n4*4)/10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1 + n2*2 + n3*3 + n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1 + n2*2 + n3*3 + n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1 + n2*2 + n3*3 + n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1 + n2*2 + n3*3 + n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1 + n2*2 + n3*3 + n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1 + n2*2 + n3*3 + n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:16:12)
-- CODE: 
n1 = float(input("Digite a primeira nota:"))
n2 = float(input("Digite a segunda nota:"))
n3 = float(input("Digite a terceira nota:"))
n4 = float(input("Digite a quarta nota:"))

p1,p2,p3,p4 = 1,2,3,4

media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)

print("Média Ponderada:",round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 01:27:54)
-- CODE: 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = (n1*1 + n2*2 + n3*3 + n4*4)/10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:19:36)
-- CODE: 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media (n1*1+n2*2+n3*3+n4*4)/10

print(round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media (n1*1+n2*2+n3*3+n4*4)/10
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:15:09)
-- CODE: 
n1 = float(input("Digite a primeira nota:"))
n2 = float(input("Digite a segunda nota:"))
n3 = float(input("Digite a terceira nota:"))
n4 = float(input("Digite a quarta nota:"))

p1,p2,p3,p4 = 1,2,3,4

media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)

print("Média Ponderada:",round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:12:24)
-- CODE: 
n1 = float(input("Digite a primeira nota:"))
n2 = float(input("Digite a segunda nota:"))
n3 = float(input("Digite a terceira nota:"))
n4 = float(input("Digite a quarta nota:"))

p1,p2,p3,p4 = 1,2,3,4

media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)

print("Média Ponderada:",round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 01:28:27)
-- CODE: 
n1 = float(input())
n2 = float(input())
n3 = float(input())
n4 = float(input())

media = (n1*1 + n2*2 + n3*3 + n4*4)/10

print(round(media,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 22:10:53)
-- CODE: 
n1 = float(input("Digite a primeira nota:"))
n2 = float(input("Digite a segunda nota:"))
n3 = float(input("Digite a terceira nota:"))
n4 = float(input("Digite a quarta nota:"))

p1,p2,p3,p4 = 1,2,3,4

media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1 + n2*p2 + n3*p3 + n4*p4)/(p1 + p2 + p3 + p4)
    ^^^^^
NameError: name 'media' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 22:14:14)
-- CODE: 
n1 = float(input("Digite a primeira nota:"))
n2 = float(input("Digite a segunda nota:"))
n3 = float(input("Digite a terceira nota:"))
n4 = float(input("Digite a quarta nota:"))

p1,p2,p3,p4=1,2,3,4

media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)

print("Média Ponderada:",round(media,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media (n1*p1+n2*p2+n3*p3+n4*p4)/(p1+p2+p3+p4)
    ^^^^^
NameError: name 'media' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
